Ændret [ ] på enhed

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -88,7 +88,6 @@ Den fundne værdi for t indsættes i $y(t)$, og udtrykket reduceres, \citep[Side
 y(t(x)) &= \sin \theta \frac{x}{\cos \theta v_0} v_0 - \frac{g}{2} \left(\frac{x}{\cos \theta v_0}\right)^2 + y_0 \\
 y(x) &= \tan \theta x - \frac{gx^2}{2(\cos \theta v_0)^2} + y_0
 \label{eq:pf:y(x(t))}
-<<<<<<< HEAD
 \end{split}
 \end{align}
 
@@ -103,11 +102,9 @@ Desuden skal målet bevæge sig 50 - 52 [m], i de videre beregninger 52 [m]. Det
 \todo[inline, author=Michael]{Måske giver det ikke mening med alle de decimaler, da det er udregnet med g = 9.82 - men jeg ved heller ikke hvor jeg skal finde en mere præcis måling af g?}
 \begin{eqnarray}
 \theta &=& 9.103 \degree \\
-v_0 &=& 34.589 [\frac{m}{s}]
+v_0 &=& 34.589 \left[ \frac { m }{ s }  \right] 
 \end{eqnarray}
-<<<<<<< HEAD
-%----------------------
-=======
+
 Disse parametre indsættes i vektorfunktionen fra ligning \ref{eq:pf:vektorparabel} samt udtrykket fra ligning \ref{eq:pf:y(x)2}. Udtrykkene reduceres: 
 \begin{align}
 \begin{split}
@@ -179,10 +176,4 @@ Pos(t) = \left( \begin{array}{c}
 \label{eq:pf:vektorparabel3d}
 \end{split}
 \end{align}
-<<<<<<< HEAD
-=======
-
->>>>>>> 89af72fd988348f074ff347ca3b3573dfa2d8349
-
-
 Bemærk udgangspunktet for kastet er flyttet fra origo, til HHs position. (Punkt D på figur \ref{fig:para_in_xy_plane})
