--- a/Rapport/graphics/inerti_PTS.tex
+++ b/Rapport/graphics/inerti_PTS.tex
@@ -5,12 +5,15 @@
 \draw[fill = gray] (0,0.5)--(7,0.5)--(7,4.5)--(7.5,4.5)--(7.5,0)--(-0.5,0)--(-0.5,4.5)--(0,4.5)--(0,0.5);
 \draw[fill = black] (3.35,0)--(3.65,0)--(3.65,-0.5)--(3.35,-0.5)--(3.35,0);
 
-\draw[dashed, red] (1,6.5)--(1,7.5);
-\draw[dashed, red] (6,6.5)--(6,7.5);
-\draw[dashed, red] (1,1)--(1,1.5);
-\draw[dashed, red] (6,1)--(6,1.5);
+\draw[dashed, blue] (1,6.5)--(1,7);
+\draw[dashed, blue] (6,6.5)--(6,7);
+\draw[dashed, blue] (1,1)--(1,1.5);
+\draw[dashed, blue] (6,1)--(6,1.5);
+
+\draw[dashed, red] (0.5,7)--(0.5,7.5);
+\draw[dashed, red] (6.5,7)--(6.5,7.5);
 \draw [decorate,decoration={brace,amplitude=10pt},xshift=0pt,yshift=0pt]
-(1,7.5)--(6,7.5);
+(0.5,7.5)--(6.5,7.5);
 
 \draw[dashed, red] (6.5,7)--(8,7);
 \draw[dashed, red] (7.5,1)--(8,1);
@@ -18,10 +21,13 @@
 \draw [decorate,decoration={brace,amplitude=10pt},xshift=0pt,yshift=0pt]
 (8,7)--(8,1);
 
-\draw[dashed, red] (0,-0.5)--(0,0.5);
-\draw[dashed, red] (7,-0.5)--(7,0.5);
+\draw[dashed, blue] (-0.5,0.5)--(0,0.5);
+\draw[dashed, blue] (7,0.5)--(7.5,0.5);
+
+\draw[dashed, red] (-0.5,-0.5)--(-0.5,0);
+\draw[dashed, red] (7.5,-0.5)--(7.5,0);
 \draw [decorate,decoration={brace,amplitude=10pt},xshift=0pt,yshift=0pt]
-(7,-0.5)--(0,-0.5);
+(7.5,-0.5)--(-0.5,-0.5);
 
 \draw[dashed, red] (-0.5,0)--(-1,0);
 \draw[dashed, red] (-0.5,4.5)--(-1,4.5);
@@ -40,8 +46,3 @@
 \draw [decorate,decoration={brace,amplitude=10pt},xshift=0pt,yshift=0pt]
 (-0.5,5)--(0,5);
 \draw(-0.25,5.75) node{${L_{pro}}$};
-
-\draw[dashed, red] (0.5,7)--(0.5,7.5);
-\draw [decorate,decoration={brace,amplitude=10pt},xshift=0pt,yshift=0pt]
-(0.5,7.5)--(1,7.5);
-\draw(0.75,8.15) node{${L_{pro}}$};
