--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -19,7 +19,7 @@ Det har været nødvendigt at foretage simplificeringer til bestemmelsen af PTS 
 Idet vores viden kun har kendskab til SISO\footnote{Single input - single output.}-systemer, vil PTS anses som værende uafhængige strukturer.\todo[author=Anders,inline,color=gray! 100]{Mikael, her skal vi lige have snakket omkring, 
 hvordan vægten for tilt skal påvirke pan. Tilt anses som værende symmetrisk omkring pan's 
 rotation, derfor tænker jeg at tilts vægt bare skal lægges til ${L_{3}}$.} 
-
+\todo[inline, author=Michael, color=blue! 50]{Jeg har regnet mig frem til at tilt bevæger sig indenfor for disse grænser:  $-0.54 \degree < tilt < 12.15 \degree $. (Dette gælder hvis PTS origin er placeret 0,4 m over Station 4, hvilket er vores udgangspunkt). }
 \subsection{Simplificering samt bestemmelse af PTS's inertimoment}
 Den teoritiske beregning er foretaget ud fra følgende simplificeringer:
 \begin{itemize}
