--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -17,14 +17,15 @@ banen ses på figur \ref{fig:ES}. Det kartesiske koordinatsystem har origo i hal
 som indtegnet 
 nederst på figuren. I ES skal rammes serier af duer/mål der afskydes fra 
 enten ”High House” eller ”Low House”, og med skud fra hver af de otte stationer langs 
-cirkelperiferien. I dette projekt kigges kun på tilfældet hvor der afskydes mål fra ”High-
+cirkelperiferien. Dette projekt er afgrænset til et enkelt tilfælde - afskydning fra ”High-
 House” med pan-and-tilt systemet placeret på station 4.\\
 
 Jævnfør reglerne for ES, skal duer/mål passere target crossing point (TCS) som er 
 placeret i $4,57 [m]$ over origo. (0; 0; 4.57). Fejlmargin for passagen er $\pm0,45 [m]$. 
 Målene skal desuden flyve $50 – 52 [m]$.  High house er placeret $20,11 [m]$ fra TCS, i en 
-højde af $3,05 [m]$. Da luftmodstanden er negligerbar kan parablen (2. grads 
-polynomium) findes ved at indsætte de kendte punkter. Herunder er parablen vist i et 
+højde af $3,05 [m]$. 
+%Da luftmodstanden er negligerbar kan parablen (2. grads polynomium) findes ved at indsætte de kendte punkter. 
+Herunder er parablen vist i et 
 2D plan, figur \ref{fig:HH2D_para}.
 \begin{figure}[!th]
 \centering
