--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -1,10 +1,9 @@
-\section{PTS's inertimoment}
+\section{Pan \& Tilt-rammernes inertimoment}
 \label{sec:teo_PTS}
-
-For at kunne modellere reguleringssløjerne bedst muligt er det essentielt at have de variable, 
-som påvirkes fra PTS. Dette bevirker at der skal findes en teoritisk værdi for inertimomentet for den 
-kvadratiske aluminiums ramme og et inertimoment for den u-formet aluminiums ramme, hhv. tilt og pan.\\
-Figur \ref{fig:inerti_PTS} viser en skitse af systemet med opmålinger foretaget manuelt, hvor ${L_{1}} =0,292 [m]$,
+For at opnå den optimale respons, skal reguleringen tage højde for, at Pan \& Tilt-motorerne møder modstand i form af
+Pan \& Tilt-rammernes inertimoment. Inertimomentet kan bestemmes ved kendskab til rammernes
+masse og dimensioner. Beregningen tager udgangspunkt i den simplificerede model skitseret i figur \ref{fig:inerti_PTS}.
+På figuren er rammernes enkelte længder markeret, og de er målt til ${L_{1}} =0,292 [m]$,
 ${L_{2}} =0,280 [m]$, ${L_{3}}= 0,42 [m]$, ${L_{4}} =0,246 [m]$, ${L_{pro}}=0,04 [m]$.
 \begin{figure}[!th]
 \centering
@@ -15,58 +14,64 @@ ${L_{2}} =0,280 [m]$, ${L_{3}}= 0,42 [m]$, ${L_{4}} =0,246 [m]$, ${L_{pro}}=0,04
 \label{fig:inerti_PTS}
 \end{figure}
 
-Det har været nødvendigt at foretage simplificeringer til bestemmelsen af PTS inertimoment. 
-Idet vores viden kun har kendskab til SISO\footnote{Single input - single output.}-systemer, vil PTS anses som værende uafhængige strukturer.\todo[author=Anders,inline,color=gray! 100]{Mikael, her skal vi lige have snakket omkring, 
+I det følgende beregnes Tilt-rammens inertimoment omkring tilt-aksen,
+Pan-rammens inertimoment omkring pan-aksen,
+og Tilt-rammens påvirkning på inertimomentet omkring pan-aksen diskuteres.
+\todo[author=Anders,inline,color=gray! 100]{Mikael, her skal vi lige have snakket omkring, 
 hvordan vægten for tilt skal påvirke pan. Tilt anses som værende symmetrisk omkring pan's 
 rotation, derfor tænker jeg at tilts vægt bare skal lægges til ${L_{3}}$.} 
 \todo[inline, author=Michael, color=blue! 50]{Jeg har regnet mig frem til at tilt bevæger sig indenfor for disse grænser:  $-0.54 \degree < tilt < 12.15 \degree $. (Dette gælder hvis PTS origin er placeret 0,4 m over Station 4, hvilket er vores udgangspunkt). }
-\subsection{Simplificering samt bestemmelse af PTS's inertimoment}
+
+\subsection{Beregning af Pan \& Tilt-rammernes inertimoment}
 Den teoritiske beregning er foretaget ud fra følgende simplificeringer:
 \begin{itemize}
-\item Aluminimumsprofilen, 40x40L, har en massefylde på $\rho=1,5 [kg/m]$, \citep[Kap. 2 side. 4]{alu_profil_desitet}. 
-\item Inertimomenterne for aluminimumsprofilerne ${L_{2}}$ og ${L_{4}}$ er bestemt udfra punktmasser, som er parallelforskudt i forhold til rotationsaksen. \citep[Side. 254, ligning 10-36]{fund_of_physics}.
+\item Aluminimumsprofilen, 40x40L, har en massefylde på $\rho=1,5 [kg/m]$, \citep[Kap. 2 side. 4]{alu_profil_desitet}.
+\item Rammerne simplificeres som bestående af tynde stænger, således at hver ramme har to stænger, hvis bidrag
+til inertimomentet kan beregnes som var de punktmasser forskudt i forhold til rotationsaksen\citep[Side. 254, ligning 10-36]{fund_of_physics},
+vha. ligning \ref{eq:punktmasse_para}.
 \begin{equation}
 I={ I }_{ com }+M\cdot { h }^{ 2 }
 \label{eq:punktmasse_para} 
 \end{equation}
-hvor ${I_{com}} = 0$ og $h$ er afstand til punktmassen fra rotationsaksen.
-\item Inertimomenterne for aluminimumsprofilerne ${L_{1}}$ og ${L_{3}}$ er bestemt som en tynd stang, hvor stagens center er placeret vinkelret på rotationsaksen. \citep[Side. 255, tabel 10-2e]{fund_of_physics}.
+hvor ${I_{com}} = 0$ og $h$ er afstand til punktmassen (stangen) fra rotationsaksen.
+Inertimomentet for de stænger, der står vinkelret på rotationsakserne, kan beregnes vha. ligning \ref{eq:stang}
+\citep[Side. 255, tabel 10-2e]{fund_of_physics}.
 \begin{equation}
 I=\frac { 1 }{ 12 } M\cdot { L }^{ 2 }
-\label{eq:punktmasse_para} 
+\label{eq:stang} 
 \end{equation}
 \end{itemize}
 
-Med følgende bestemmelser er det muligt at finde pan og tilts teoritiske inertimoment.
+Med ovenstående formler er det muligt at finde Pan og Tilt-rammernes teoritiske inertimoment:
 \begin{align}
 \label{eq:inerti_tilt_pan}
 \begin{split}
-{ inerti }_{ tilt } &= \left( \left( 1/12\cdot \rho \cdot { {L_{1}} }^{ 3 } \right) +\left( \rho \left( {L_{2}}-2\cdot {L_{pro}} \right) { \left( \frac { {L_{1}}-{L_{pro}}}{ 2 }  \right)  }^{ 2 } \right)  \right) \cdot 2
+{ I }_{ tilt,1 } &= \left( \left( 1/12\cdot \rho \cdot { {L_{1}} }^{ 3 } \right) +\left( \rho \left( {L_{2}}-2\cdot {L_{pro}} \right) { \left( \frac { {L_{1}}-{L_{pro}}}{ 2 }  \right)  }^{ 2 } \right)  \right) \cdot 2
 \\
- &= 0,0157499
+ &= 0,0157499 \text{ [kg m$^2$]}
 \\
-{ inerti }_{ pan }&=\left( 1/12\cdot \rho \cdot { { L }_{ 3 } }^{ 3 } \right) +\left( \rho \left( { L }_{ 4 }-{ L }_{ pro } \right) { \left( \frac { { L }_{ 3 }-{ L }_{ pro } }{ 2 }  \right)  }^{ 2 } \right) \cdot 2
+{ I }_{ pan,1 }&=\left( 1/12\cdot \rho \cdot { { L }_{ 3 } }^{ 3 } \right) +\left( \rho \left( { L }_{ 4 }-{ L }_{ pro } \right) { \left( \frac { { L }_{ 3 }-{ L }_{ pro } }{ 2 }  \right)  }^{ 2 } \right) \cdot 2
 \\
- &=0,0315708
+ &=0,0315708 \text{ [kg m$^2$]}
 \end{split}
 \end{align}
 
-
-
-
-Inertimomenterne er beregnet i ligning \ref{eq:inerti_tilt_pan}. Dog udsættes motorene ikke for det teoritiske inertimoment. De to gearinger har et gearingsforhold 30:1 og 1:3 set fra motor. Multiplikation af gearingerningerne opløftet i anden, reducerer de teoritiske intermomenter med en faktor 100.  \todo[author=Anders,inline,color=gray! 100]{Mikael, måske skal der være en henvisning til sammenlægning af gearing.}
-
-\begin{align*}
+Inertimomenterne er beregnet i ligningerne \ref{eq:inerti_tilt_pan}.
+Systemets gearing gør dog at inertimomenterne, som motorerne belastes med, er mindre.
+Gearingen i EMG30-motoren er i forholdet 30:1, mens gearingen til rammerne er i forholdet 1:3.
+Ligning \ref{eq:gearing0} giver forholdet mellem det reflekterede inertimoment $I_r$ (som motoren belastes med)
+og inertimomentet $I$ efter en gearing med forholdet $N$\todo{Kilde!}.
+\begin{equation}
+I_r=\frac{I}{N^2}
+\label{eq:gearing0}
+\end{equation}
+$N$ kan altså bestemmes som multiplikationen af de to gearingsforhold, og er således lig med 10.
+I ligningerne \ref{eq:inerti_tilt_pan_fak} er de reflekterede inertimomenter beregnet.
+\begin{align}
 \label{eq:inerti_tilt_pan_fak}
 \begin{split}
-{inertifak_{tilt}}&=1,57499\cdot{10}^{-4} [kg \cdot {m}^{2}]
+{I_{tilt,2}}&=1,57499\cdot{10}^{-4} \text{ [kg m$^2$]}
 \\
-{inertifak_{pan}}&=3,15708\cdot{10}^{-4} [kg \cdot {m}^{2}]
+{I_{pan,2}}&=3,15708\cdot{10}^{-4} \text{ [kg m$^2$]}
 \end{split}
-\end{align*}
-
-\subsection{Konklusion af PTS's inertimoment}
-Ud fra simplificeringerne er inertimomentet for hhv. pan og tilt fundet. Selvom værdierne er små, tages de er betragtning til designet af de to kontrollere.
-
-
-
+\end{align}
