Fjernet en LaTeX-warning.

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -22,7 +22,7 @@ House” med pan-and-tilt systemet placeret på station 4.\\
 
 Jævnfør reglerne for ES, skal duer/mål passere target crossing point (TCS) som er 
 placeret i $4,57 [m]$ over origo. (0; 0; 4.57). Fejlmargin for passagen er $\pm0,45 [m]$. 
-Målene skal desuden flyve $50 – 52 [m]$.  High house er placeret $20,11 [m]$ fra TCS, i en 
+Målene skal desuden flyve $50 - 52 [m]$.  High house er placeret $20,11 [m]$ fra TCS, i en 
 højde af $3,05 [m]$. 
 %Da luftmodstanden er negligerbar kan parablen (2. grads polynomium) findes ved at indsætte de kendte punkter. 
 Herunder er parablen vist i et 
