Rettet stavefejl i litteraturliste.

--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -1,38 +1,62 @@
-@Book{reflist,author     = {surname, initials and surname, initials and surname, initials},
+@Book{reflist,
+author     = {surname, initials and surname, initials and surname, initials},
 year        ={2013},
 title          ={title of the book},
-edition    ={22},publisher = {Addison-Wesley},address={hollywood},}
+edition    ={22},
+publisher = {Addison-Wesley},
+address={hollywood},
+}
 
 
-@Book{operating_systems_concepts_ed9,author     = {Silberschatz, A. and Galvin, P. B. and Gagne, G.},
+@Book{operating_systems_concepts_ed9,
+author     = {Silberschatz, A. and Galvin, P. B. and Gagne, G.},
 year        ={2012},
 title          ={Operating Systems Concepts},
-edition    ={9},publisher = {Wiley},address={},}
+edition    ={9},
+publisher = {Wiley},
+address={},
+}
 
-@Book{operating_systems_concepts_ed8,author     = {Silberschatz, A. and Galvin, P. B. and Gagne, G.},
+@Book{operating_systems_concepts_ed8,
+author     = {Silberschatz, A. and Galvin, P. B. and Gagne, G.},
 year        ={2008},
 title          ={Operating Systems Concepts},
-edition    ={8},publisher = {Wiley},address={},}
+edition    ={8},
+publisher = {Wiley},
+address={},
+}
 
-@Book{pedroni_VHDL,author     = {Pedroni, V. A.},
+@Book{pedroni_VHDL,
+author     = {Pedroni, V. A.},
 year        ={2010},
 title          ={Circuit Design and Simulation with VHDL},
-edition    ={2},publisher = {Massachusetts Institute of Technology ER EN SMULE ISUKKER PÅ DENNE}, address={London, England},}
+edition    ={2},
+publisher = {Massachusetts Institute of Technology ER EN SMULE ISUKKER PÅ DENNE}, 
+address={London, England},
+}
 
-@Book{reg_modern_control_systems,author     = {Dorf, R. C. and Bishop, R. H.},
+@Book{reg_modern_control_systems,
+author     = {Dorf, R. C. and Bishop, R. H.},
 year        ={2010},
 title          ={Modern Control Systems},
-edition    ={12},publisher = {Pearson Education},address={New Jersey},}
+edition    ={12},
+publisher = {Pearson Education},
+address={New Jersey},
+}
 
 
-@Book{fund_of_physics,author     = {Halliday, D. and Resnick, R. and Walker, J.},
+@Book{fund_of_physics,
+author     = {Halliday, D. and Resnick, R. and Walker, J.},
 year        ={2011},
 title          ={Fundamentals of Physics Extended},
-edition    ={9},publisher = {John Wiley \& Sons, Inc},address={Cleveland},}
+edition    ={9},
+publisher = {John Wiley \& Sons, Inc},
+address={Cleveland},
+}
 
 
 @ONLINE{alu_profil_desitet,
-author = {{Bosch Rexroth Coperation}},
+author = {{Bosch Rexroth Cooperation}},
 title = {Basic Mechanic Elements 13.0 Catalog},
 month = feb,
 year = {2013},
