--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -42,8 +42,8 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,chains, scopes}
 \usepackage{pgfplots}
-%\pgfplotsset{compat=1.8} %Den nyeste version af pgfplot. Undersøttes ikke af Anders' typesetter.
-\pgfplotsset{compat=1.6} %En gammel version af pgfplot. Burde være understøttet på alle maskiner.
+
+\pgfplotsset{compat=1.8} % Burde være understøttet på alle maskiner.
 \usepackage[europeanvoltages, europeancurrents, europeanresistors, americaninductors, smartlabels]{circuitikz}
 \usepackage{graphicx} % bruges til MATLAB figurer samt formatet .eps
 \usepackage{epstopdf} % bruges til automatisk konvertering af .eps-filer til pdf; Ellers kan man ikke kompilere med pdfLaTeX.
