par antes omkring theta

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -78,7 +78,7 @@ Hvor $\theta$ er afskydningsvinklen, $v_0$ er afskydningshastigheden, $g$ er tyn
 For at få en parabel på formen y(x), isoleres t i x(t) med henblik på at substituere t i y(x): ($x_0$ sættes til 0.)
 
 \begin{equation}
-t = \frac{x}{\cos \theta v_0}
+t = \frac{x}{\cos \left( \theta \right) v_0}
 \label{eq:pf:x(t)}
 \end{equation}
 
@@ -86,15 +86,15 @@ Den fundne værdi for t indsættes i $y(t)$, og udtrykket reduceres, \citep[Side
 
 \begin{align}
 \begin{split}
-y(t(x)) &= \sin \theta \frac{x}{\cos \theta v_0} v_0 - \frac{g}{2} \left(\frac{x}{\cos \theta v_0}\right)^2 + y_0 \\
-y(x) &= \tan \theta x - \frac{gx^2}{2(\cos \theta v_0)^2} + y_0
+y(t(x)) &= \sin \left( \theta \right) \frac{x}{\cos \left( \theta \right) v_0} v_0 - \frac{g}{2} \left(\frac{x}{\cos \left( \theta \right) v_0}\right)^2 + y_0 \\
+y(x) &= \tan \left( \theta \right) x - \frac{gx^2}{2(\cos \left( \theta \right) v_0)^2} + y_0
 \label{eq:pf:y(x(t))}
 \end{split}
 \end{align}
 
-Det ses at der er 3 ubekendte i ligningen. Dog er 3 punkter kendt fra HH parablen. Det er givet i reglerne for ESS at målet affyres fra en højde på 3.05 [m], så det indsættes i formlen. 
+Det ses at der er 3 ubekendte i ligningen. Dog er 3 punkter kendt fra HH parablen. Det er givet i reglerne for ESS at målet affyres fra en højde på $y_0 = 3.05 [m]$, så det indsættes i formlen. 
 \begin{equation}
-y(x) = \tan \theta x - \frac{gx^2}{2(\cos \theta v_0)^2} + 3.05
+y(x) = \tan \theta x - \frac{gx^2}{2(\cos \left( \theta \right)  v_0)^2} + 3.05
 \label{eq:pf:y(x)2}
 \end{equation}
 Det er givet at målet skal passere TCS som er placeret i en højde på 4.57 [m], 20.11 [m] fra HH. 
