--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -60,7 +60,7 @@ Inertimomenterne er beregnet i ligningerne \ref{eq:inerti_tilt_pan}.
 Systemets gearing gør dog at inertimomenterne, som motorerne belastes med, er mindre.
 Gearingen i EMG30-motoren er i forholdet 30:1, mens gearingen til rammerne er i forholdet 1:3.
 Ligning \ref{eq:gearing0} giver forholdet mellem det reflekterede inertimoment $I_r$ (som motoren belastes med)
-og inertimomentet $I$ efter en gearing med forholdet $N$\todo{Kilde!}.
+og inertimomentet $I$ efter en gearing med forholdet $N$ \citep{gear_inerti}.
 \begin{equation}
 I_r=\frac{I}{N^2}
 \label{eq:gearing0}
