Tilføjet kilder og ny sektion

--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -7,6 +7,14 @@ publisher = {Addison-Wesley},
 address={hollywood},
 }
 
+@Book{adam,
+author     = {Adams, R. A. and Essex, C},
+year        ={2013},
+title          ={Calculus A Complete Course},
+edition    ={7},
+publisher = {Pearson Canada},
+address={Toronto},
+}
 
 @Book{operating_systems_concepts_ed9,
 author     = {Silberschatz, A. and Galvin, P. B. and Gagne, G.},
@@ -72,9 +80,12 @@ year = {2014},
 url = {http://www.issf-sports.org/documents/rules/2013/ISSFRuleBook2013-2ndPrint-ENG.zip}
 }
 
-
-
-
+@ONLINE{gear_inerti,
+author = {{Engineers Edge}},
+title = {Gear Drive Motor Moment of Inertia Equation},
+year = {2014},
+url = {http://www.engineersedge.com/motors/gear_drive_system.htm}
+}
 
 
 
