--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -97,8 +97,8 @@ Det ses at der er 3 ubekendte i ligningen. Dog er 3 punkter kendt fra HH parable
 y(x) = \tan \theta x - \frac{gx^2}{2(\cos \left( \theta \right)  v_0)^2} + 3.05
 \label{eq:pf:y(x)2}
 \end{equation}
-Det er givet at målet skal passere TCS som er placeret i en højde på 4.57 [m], 20.11 [m] fra HH. 
-Desuden skal målet bevæge sig 50 - 52 [m], i de videre beregninger 52 [m]. Det giver koordinatsættene (20.11; 4.57) og (52; 0). Vha. disse bestemmes $\theta$ og $v_0$ til:\footnote{Ved $g = 9.82[m/{s}^{2]}$}
+Det er givet at målet skal passere TCS som er placeret i en højde på $4.57 [m]$, $20.11 [m$] fra HH. 
+Desuden skal målet bevæge sig $50 - 52 [m]$, i de videre beregninger $52 [m]$. Det giver koordinatsættene (20.11; 4.57) og (52; 0). Vha. disse bestemmes $\theta$ og $v_0$ til:\footnote{Ved $g = 9.82[m/{s}^{2]}$}
 \todo[inline, author=Michael]{Måske giver det ikke mening med alle de decimaler, da det er udregnet med g = 9.82 - men jeg ved heller ikke hvor jeg skal finde en mere præcis måling af g?}
 \begin{eqnarray}
 \theta &=& 9.103 \degree \\
