Tilføjet kontroller sektion

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -20,6 +20,7 @@
 %%%%%%%%%%%% Sektioner %%%%%%%%%%%%
 \include{./content/PTS}
 \include{./content/koordinattransformation}
+\include{./content/kontrollerdesign}
 
 
 
