--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -28,7 +28,15 @@ Koordinattransformationen fra kartesiske til sværiske kan gøres ud for nedenst
 \end{align}
 hvor $\phi$ og $\theta$ er angivet i grader. \citep[Kap. 10.6, s. 598]{adam}.
 
-
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[scale=2]
+\include*{./graphics/3d_parabola_in_xyz_plane}
+\end{tikzpicture}
+\caption[tekst i indholdsfortegnelsen]{Viser målets postion med en samplefrekvens på $10[Hz]$.  set ovenfra. D er udgangspunktet, G er nedslagspunktet. B er placeringen af PTS.}
+\label{fig:para_in_xy_plane}
+\end{figure}
+\todo[author=Anders]{mangler at måle højden på tilts roationsakse.}
 
 
 
