--- a/Rapport/graphics/high_house_2D_parabola.tex
+++ b/Rapport/graphics/high_house_2D_parabola.tex
@@ -1,6 +1,6 @@
 \begin{axis}[ 
-    xlabel=x,
-    ylabel=y,
+    xlabel=$Afstand$,
+    ylabel=$Højde$,
     grid=major,
     ytick={0,1,...,5}, % Grid intervallet
     xtick={0,5,...,55}, % Grid intervallet
