--- a/Rapport/graphics/parabola_in_xy_plane.tex
+++ b/Rapport/graphics/parabola_in_xy_plane.tex
@@ -1,12 +1,12 @@
 \draw[->] (-22,0)--(32,0) node[right]{X};
-\draw[->] (0,-22)--(0,12)node[right]{Y};
+\draw[->] (0,-22)--(0,12)node[right]{Z};
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\draw(-0.2,5)node[left]{5}--(0.2,5);
-\draw(-0.2,10)node[left]{10}--(0.2,10);
-\draw(-0.2,-5)node[left]{-5}--(0.2,-5);
-\draw(-0.2,-10)node[left]{-10}--(0.2,-10);
-\draw(-0.2,-15)node[left]{-15}--(0.2,-15);
-\draw(-0.2,-20)node[left]{-20}--(0.2,-20);
+\draw(-0.2,5)node[left]{-5}--(0.2,5);
+\draw(-0.2,10)node[left]{-10}--(0.2,10);
+\draw(-0.2,-5)node[left]{5}--(0.2,-5);
+\draw(-0.2,-10)node[left]{10}--(0.2,-10);
+\draw(-0.2,-15)node[left]{15}--(0.2,-15);
+\draw(-0.2,-20)node[left]{20}--(0.2,-20);
 \draw(5,-0.2)node[below]{5}--(5,0.2);
 \draw(10,-0.2)node[below]{10}--(10,0.2);
 \draw(15,-0.2)node[below]{15}--(15,0.2);
