--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -3,8 +3,8 @@
 For at opnå den optimale respons, skal reguleringen tage højde for, at Pan \& Tilt-motorerne møder modstand i form af
 Pan \& Tilt-rammernes inertimoment. Inertimomentet kan bestemmes ved kendskab til rammernes
 masse og dimensioner. Beregningen tager udgangspunkt i den simplificerede model skitseret i figur \ref{fig:inerti_PTS}.
-På figuren er rammernes enkelte længder markeret, og de er målt til ${L_{1}} =0,292 [m]$,
-${L_{2}} =0,280 [m]$, ${L_{3}}= 0,42 [m]$, ${L_{4}} =0,246 [m]$, ${L_{pro}}=0,04 [m]$.
+På figuren er rammernes enkelte længder markeret, og de er målt til \({L_{1}} =0,292 [m]\),
+\({L_{2}} =0,280 [m]\), \({L_{3}}= 0,42 [m]\), \({L_{4}} =0,246 [m]\), \({L_{pro}}=0,04 [m]\).
 \begin{figure}[!th]
 \centering
 \begin{tikzpicture}[scale=0.8]
@@ -19,13 +19,13 @@ Pan-rammens inertimoment omkring pan-aksen,
 og Tilt-rammens påvirkning på inertimomentet omkring pan-aksen diskuteres.
 \todo[author=Anders,inline,color=gray! 100]{Mikael, her skal vi lige have snakket omkring, 
 hvordan vægten for tilt skal påvirke pan. Tilt anses som værende symmetrisk omkring pan's 
-rotation, derfor tænker jeg at tilts vægt bare skal lægges til ${L_{3}}$.} 
-\todo[inline, author=Michael, color=blue! 50]{Jeg har regnet mig frem til at tilt bevæger sig indenfor for disse grænser:  $-0.54 \degree < tilt < 12.15 \degree $. (Dette gælder hvis PTS origin er placeret 0,4 m over Station 4, hvilket er vores udgangspunkt). }
+rotation, derfor tænker jeg at tilts vægt bare skal lægges til \({L_{3}}\).} 
+\todo[inline, author=Michael, color=blue! 50]{Jeg har regnet mig frem til at tilt bevæger sig indenfor for disse grænser:  \(-0,54 \degree < tilt < 12,15 \degree\). (Dette gælder hvis PTS origin er placeret 0,4 m over Station 4, hvilket er vores udgangspunkt). }
 
 \subsection{Beregning af Pan \& Tilt-rammernes inertimoment}
 Den teoritiske beregning er foretaget ud fra følgende simplificeringer:
 \begin{itemize}
-\item Aluminimumsprofilen, 40x40L, har en massefylde på $\rho=1,5 [kg/m]$, \citep[Kap. 2 side. 4]{alu_profil_desitet}.
+\item Aluminimumsprofilen, 40x40L, har en massefylde på \(\rho=1,5 [kg/m]\), \citep[Kap. 2 side. 4]{alu_profil_desitet}.
 \item Rammerne simplificeres som bestående af tynde stænger, således at hver ramme har to stænger, hvis bidrag
 til inertimomentet kan beregnes som var de punktmasser forskudt i forhold til rotationsaksen\citep[Side. 254, ligning 10-36]{fund_of_physics},
 vha. ligning \ref{eq:punktmasse_para}.
@@ -33,7 +33,7 @@ vha. ligning \ref{eq:punktmasse_para}.
 I={ I }_{ com }+M\cdot { h }^{ 2 }
 \label{eq:punktmasse_para} 
 \end{equation}
-hvor ${I_{com}} = 0$ og $h$ er afstand til punktmassen (stangen) fra rotationsaksen.
+hvor \({I_{com}} = 0\) og \(h\) er afstand til punktmassen (stangen) fra rotationsaksen.
 Inertimomentet for de stænger, der står vinkelret på rotationsakserne, kan beregnes vha. ligning \ref{eq:stang}
 \citep[Side. 255, tabel 10-2e]{fund_of_physics}.
 \begin{equation}
@@ -59,13 +59,13 @@ Med ovenstående formler er det muligt at finde Pan og Tilt-rammernes teoritiske
 Inertimomenterne er beregnet i ligningerne \ref{eq:inerti_tilt_pan}.
 Systemets gearing gør dog at inertimomenterne, som motorerne belastes med, er mindre.
 Gearingen i EMG30-motoren er i forholdet 30:1, mens gearingen til rammerne er i forholdet 1:3.
-Ligning \ref{eq:gearing0} giver forholdet mellem det reflekterede inertimoment $I_r$ (som motoren belastes med)
-og inertimomentet $I$ efter en gearing med forholdet $N$ \citep{gear_inerti}.
+Ligning \ref{eq:gearing0} giver forholdet mellem det reflekterede inertimoment \(I_r\) (som motoren belastes med)
+og inertimomentet \(I\) efter en gearing med forholdet \(N\) \citep{gear_inerti}.
 \begin{equation}
 I_r=\frac{I}{N^2}
 \label{eq:gearing0}
 \end{equation}
-$N$ kan altså bestemmes som multiplikationen af de to gearingsforhold, og er således lig med 10.
+\(N\) kan altså bestemmes som multiplikationen af de to gearingsforhold, og er således lig med 10.
 I ligningerne \ref{eq:inerti_tilt_pan_fak} er de reflekterede inertimomenter beregnet.
 \begin{align}
 \label{eq:inerti_tilt_pan_fak}
