--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -2,12 +2,12 @@
 Dette appendix beskæftiger sig med bestemmelsen af motorparametrene.
 \subsection{DC Motor karakteristik}
 DC Motoren kan modelleres efter diagrammet på fig. \todo[inline]{kredsløbsdiagram skal indsættes}\todo[inline]{Kildehenvisning til DC motor model}.
-Ligningen for $V_m$ er givet ved ligning \ref{eq:Vm_transient0}.
+Ligningen for \(V_m\) er givet ved ligning \ref{eq:Vm_transient0}.
 \begin{equation}
 	V_m(t)=L_m \cdot \frac{\mathrm d}{\mathrm d t} \big( i_m(t) \big)+R_m \cdot i_m(t) + V_{EMF}(t)
 	\label{eq:Vm_transient0} 
  \end{equation}
-Den modelektromotoriske kraft, $V_{EMF}$ er givet ved ligning \ref{eq:VEMF}.
+Den modelektromotoriske kraft, \(V_{EMF}\) er givet ved ligning \ref{eq:VEMF}.
 \begin{equation}
 	V_{EMF}(t) = K_b \cdot \omega(t)
 	\label{eq:VEMF}
@@ -32,15 +32,15 @@ Kraftmomentet kan altså udtrykkes ved ligning \ref{eq:Tm_leveret}
 	\label{eq:Tm_leveret} 
  \end{equation}
 
-Proportionalitetskonstanterne $K_b$ og $K_t$ har i SI-enheder samme numeriske værdi\todo{KILDE!}.
+Proportionalitetskonstanterne \(K_b\) og \(K_t\) har i SI-enheder samme numeriske værdi\todo{KILDE!}.
 
 \subsection{Eksperiment 1}
 \label{ss:eksperiment1}
 \subsubsection{Formål}
-Bestemmelse af motorens ækvivalente resistans, $R_m$.
+Bestemmelse af motorens ækvivalente resistans, \(R_m\).
 \subsubsection{Teori}
 Forhindres motoren i at rotere, vil vinkelhastigheden være nul.
-Hvis man påfører motoren en DC-spænding $V_m$,
+Hvis man påfører motoren en DC-spænding \(V_m\),
 og venter til motorens respons har nået steady-state,
 så vil strømmen igennem motoren være konstant.
 Her vil ligning \ref{eq:Vm_transient1} kunne omskrives til ligning \ref{eq:resistans_E1}.
@@ -48,8 +48,8 @@ Her vil ligning \ref{eq:Vm_transient1} kunne omskrives til ligning \ref{eq:resis
 	V_m=R_m \cdot i_m
 	\label{eq:resistans_E1} 
  \end{equation}
-Målinger af sammenhørende steady-state værdier for strøm $i_m$ og spænding $V_m$
-kan altså bruges til bestemmelse af den ækvivalente resistans $R_m$.
+Målinger af sammenhørende steady-state værdier for strøm \(i_m\) og spænding \(V_m\)
+kan altså bruges til bestemmelse af den ækvivalente resistans \(R_m\).
 \subsubsection{Fremgangsmåde}
 Motoren låses fast vha. en skiftenøgle og påføres en lav spænding.
 Efter nogle sekunder, når transientresponsen er væk,
@@ -59,7 +59,7 @@ Værdierne noteres, og forsøget gentages ved andre spændinger.
 De anvendte multimetre er af typen TTi 1604.
 \subsubsection{Måleresultater}
 I tabel \ref{tb:resistans} findes målingerne af strøm og spænding.\todo[inline,color=blue! 50]{Mikael, jeg synes de vil se bedre ud i tabellen, hvis der 
-var et mindre decimal i de ni første, ${V_{m}}$.}
+var et mindre decimal i de ni første, \(V_m\).}
 \begin{figure}[th!]
 	\centering
 	\input{content/tb_resistans.tex}
@@ -77,32 +77,32 @@ Den målte strøm-spændingskarakteristik for DC-motoren er indtegnet på figur 
 	\label{fig:resistans0}
 \end{figure}
 Som det ses på figur \ref{fig:resistans0} er sammenhængen mellem strøm og spænding
-tilnærmelsesvis lineær, og en lineær regression på dataene vil altså give en tilnærmet værdi for $R_m$.
-$R_m$ er ved lineær regression beregnet til 5,21 $\Omega$.\todo{Flere decimaler?}
+tilnærmelsesvis lineær, og en lineær regression på dataene vil altså give en tilnærmet værdi for \(R_m\).
+\(R_m\) er ved lineær regression beregnet til 5,21 \([\Omega]\). \todo{Flere decimaler?}
 
-Den i forsøget mindste afsatte effekt i motoren er 48 mW.
+Den i forsøget mindste afsatte effekt i motoren er 48 [mW].
 \subsubsection{Diskussion}
 Da sammenhængen mellem strøm og spænding i målingerne er tilnærmelsesvis lineær,
-vurderes den fundne værdi for $R_m$ at være meget nøjagtig,
-om ikke andet, så for effektafsættelser i motoren på mindst 48 mW.
+vurderes den fundne værdi for \(R_m\) at være meget nøjagtig,
+om ikke andet, så for effektafsættelser i motoren på mindst 48 [mW].
 \subsubsection{Konklusion}
-Motorens ækvivalente resistans, $R_m$ er vha. sammenhørende målinger af strøm og spænding
-for en rotationslåst motor, ved effektafsættelser i motoren på 48 mW og højere,
-blevet bestemt til 5,21 $\Omega$.\todo{Flere decimaler?}
+Motorens ækvivalente resistans, \(R_m\) er vha. sammenhørende målinger af strøm og spænding
+for en rotationslåst motor, ved effektafsættelser i motoren på 48 [mW] og højere,
+blevet bestemt til 5,21 \([\Omega]\). \todo{Flere decimaler?}
 \subsection{Eksperiment 2}
 \label{ss:eksperiment2}
 \subsubsection{Formål}
-Bestemmelse af motorens ækvivalente induktans, $L_m$.
+Bestemmelse af motorens ækvivalente induktans, \(L_m\).
 Der er benyttet to forskellige metoder til bestemmelsen af induktansen.
 Metode 1 tager udgangspunkt i tidskonstanten for et RL-kredsløb,
 mens metode 2 tager udgangspunkt i faseforskellen mellem forskellige komplekse impedanser i serie.
 \subsubsection{Teori}
 \paragraph{Metode 1}
 Forhindres motoren i at rotere, vil vinkelhastigheden som beskrevet i afsnit \ref{ss:eksperiment1} være nul.
-Ved denne metode er vi interesseret i systemets transientrespons, hvor strømmen $i_m$ ikke er konstant.
-Forbindes en modstand $R_s$ i serie med DC-motoren som vist på fig. %\ref{fig:e2_rl1}
+Ved denne metode er vi interesseret i systemets transientrespons, hvor strømmen \(i_m\) ikke er konstant.
+Forbindes en modstand \(R_s\) i serie med DC-motoren som vist på fig. %\ref{fig:e2_rl1}
 \todo[inline]{Indsæt kredsløbsdiagram med Rs}
-vil der være tale om et RL-kredsløb, med en tidskonstant $\tau$ givet ved ligning \ref{eq:rltimeconstant}.
+vil der være tale om et RL-kredsløb, med en tidskonstant \(\tau\) givet ved ligning \ref{eq:rltimeconstant}.
 Transientresponsen for alle strømme og spændingsfald i kredsløbet har denne tidskonstant.
 \todo[inline]{Indsæt kilde eller forklaring til RL-tidskonstant.}
 \begin{equation}
@@ -110,7 +110,7 @@ Transientresponsen for alle strømme og spændingsfald i kredsløbet har denne t
 	\label{eq:rltimeconstant} 
  \end{equation}
 Tidskonstanten er et mål for tiden det tager systemet at opnå ca. 63,2 \% af slutværdien.\todo{D\&B-kilde}
-For en (eksponentielt) aftagende kurve med tidskonstanten $\tau$ kan tidskonstanten aflæses som
+For en (eksponentielt) aftagende kurve med tidskonstanten \(\tau\) kan tidskonstanten aflæses som
 tidsforskellen mellem to niveauer V0 og V1, hvor V1 er ca. 36,8 \% af V0.
 
 Ved omskrivning af ligning \ref{eq:rltimeconstant} kan induktansen altså bestemmes vha. ligning \ref{eq:induktans0}.
@@ -121,9 +121,9 @@ Ved omskrivning af ligning \ref{eq:rltimeconstant} kan induktansen altså bestem
 \paragraph{Metode 2}
 Forhindres motoren i at rotere, vil vinkelhastigheden som beskrevet i afsnit \ref{ss:eksperiment1} være nul.
 Ved denne metode er vi interesseret i systemets steady-state respons.
-Forbindes en modstand $R_{s1}$ i serie med DC-motoren som vist på fig. %ref{fig:e2_rl2}
+Forbindes en modstand \(R_{s1}\) i serie med DC-motoren som vist på fig. %ref{fig:e2_rl2}
 \todo[inline]{Indsæt kredsløbsdiagram med Rs1 og AC-forsyning med DC offset}
-vil impedansen $\mathbf{Z_m}$ af DC-motoren være givet ved ligning \ref{eq:zm_0}.
+vil impedansen \(\mathbf{Z_m}\) af DC-motoren være givet ved ligning \ref{eq:zm_0}.
 \begin{equation}
 	\mathbf{Z_m}=R_{s1}\cdot\frac{\mathbf{V_1}-\mathbf{V_2}}{\mathbf{V_2}}
 			=R_{s1}\cdot\left(\frac{\mathbf{V_1}}{\mathbf{V_2}}-1\right)
@@ -131,25 +131,25 @@ vil impedansen $\mathbf{Z_m}$ af DC-motoren være givet ved ligning \ref{eq:zm_0
 	\label{eq:zm_0} 
  \end{equation}
 Bemærk at spændingsfaldene noteres med fed skrift for at indikere at her er tale om phasors (komplekse tal),
-at $A_1$ og $A_2$ angiver amplituderne af $\mathbf{V_1}$ og $\mathbf{V_2}$,
-samt at $\phi=\phi_1-\phi_2$ angiver faseforskellen mellem de to signaler.
-Denne faseforskel kan også udtrykkes ved tidsforsinkelsen $\Delta{t}$ ganget med vinkelfrekvensen $\omega$.
+at \(A_1\) og \(A_2\) angiver amplituderne af \(\mathbf{V_1}\) og \(\mathbf{V_2}\),
+samt at \(\phi=\phi_1-\phi_2\) angiver faseforskellen mellem de to signaler.
+Denne faseforskel kan også udtrykkes ved tidsforsinkelsen \(\Delta{t}\) ganget med vinkelfrekvensen \(\omega\).
 Ligning \ref{eq:zm_1} angiver impedansen på rektangulær form.
 \begin{equation}
 	\mathbf{Z_m}=R_{s1}\cdot\left(\frac{A_1}{A_2}\cdot{\cos (\phi)}-1\right)	%Realdel
 	+\mathbf{j}\cdot{R_{s1}}\cdot\frac{A_1}{A_2}\cdot\sin(\phi)	%Imaginærdel
 	\label{eq:zm_1} 
  \end{equation}
-Samtidig vides det, at den rotationslåse motors impedans består af resistansen $R_m$ samt
-reaktansen $X_m$, hvor $X_m$ er reaktansen for en spole, altså $\omega\cdot{L_m}$.
-Motorens impedans kan altså også beskrives ved ligning \ref{eq:zm_2}, hvor $\mathbf{j}$ er den imaginære enhed.
+Samtidig vides det, at den rotationslåse motors impedans består af resistansen \(R_m\) samt
+reaktansen \(X_m\), hvor \(X_m\) er reaktansen for en spole, altså \(\omega\cdot{L_m}\).
+Motorens impedans kan altså også beskrives ved ligning \ref{eq:zm_2}, hvor \(\mathbf{j}\) er den imaginære enhed.
 \begin{equation}
 	\mathbf{Z_m}=R_m+\mathbf{j}\cdot\omega\cdot{L_m}
 	\label{eq:zm_2} 
  \end{equation}
 Sættes ligningerne \ref{eq:zm_1} og \ref{eq:zm_2} lig med hinanden
-kan man altså udtrykke resistansen $R_m$ og induktansen $L_m$ som funktioner
-af faseforskellen på $\mathbf{V_1}$ og $\mathbf{V_2}$,
+kan man altså udtrykke resistansen \(R_m\) og induktansen \(L_m\) som funktioner
+af faseforskellen på \(\mathbf{V_1}\) og \(\mathbf{V_2}\),
 hvilket giver ligningerne \ref{eq:Rm_0} og \ref{eq:Lm_0}.
 \begin{equation}
 	\mathbf{R_m}=R_{s1}\cdot\left(\frac{A_1}{A_2}\cdot{\cos (\phi)}-1\right)
@@ -160,7 +160,7 @@ hvilket giver ligningerne \ref{eq:Rm_0} og \ref{eq:Lm_0}.
 	\label{eq:Lm_0} 
  \end{equation}
 
-Effektafsættelsen $P_{avg}$ i en modstand R, påført en vekselspænding med amplituden V, givet ved ligning \ref{eq:effekt}.
+Effektafsættelsen \(P_{avg}\) i en modstand R, påført en vekselspænding med amplituden V, givet ved ligning \ref{eq:effekt}.
 \todo[inline]{Kildehenvisning til effektformel}
 \begin{equation}
 	P_{avg}=\frac{\left(\frac{V}{\sqrt{2}}\right)^2}{R}
@@ -168,50 +168,50 @@ Effektafsættelsen $P_{avg}$ i en modstand R, påført en vekselspænding med am
  \end{equation}
 \subsubsection{Fremgangsmåde}
 \paragraph{Metode 1}
-En modstand $R_s$ måles efter med et multimeter og fobindes i serie med DC-motoren
+En modstand \(R_s\) måles efter med et multimeter og fobindes i serie med DC-motoren
 som på figur %\ref{fig:e2_rl1}
 .
-Kredsløbet bestående af DC-motoren og $R_s$ påføres en kendt spænding.
+Kredsløbet bestående af DC-motoren og \(R_s\) påføres en kendt spænding.
 Strømmen gennem kredsløbet afbrydes på strømforsyningen og spændingsfaldet
-over $R_s$ måles med et oscilloskop.
+over \(R_s\) måles med et oscilloskop.
 Dataene eksporteres og tidskonstanten bestemmes herudfra.
 
 Det anvendte multimeter er af typen TTi 1604,
 og oscilloskopet er af typen \todo{Oscilloskop?}.
 
 \paragraph{Metode 2}
-En modstand $R_s1$ måles efter med et multimeter og forbindes i serie med DC-motoren
+En modstand \(R_{s1}\) måles efter med et multimeter og forbindes i serie med DC-motoren
 som på figur %\ref{fig:e2_rl2}
 .
 Kredsløbet påføres en kendt AC-spænding fra en funktionsgenerator med et DC-offset så spændingen
 altid er positiv.
-Da funktionsgeneratoren ikke skal overbelastes, skal $R_s1$ vælges tilpas stor.
-AC-spændingens frekvens er 10 kHz.
-Med et oscilloskop måles spændingsfaldene $\mathbf{V_1}$ og $\mathbf{V_2}$.
-Dataene eksporteres og faseforskellen samt forholdet mellem amplituderne $A_1$ og $A_2$ bestemmes herudfra.
+Da funktionsgeneratoren ikke skal overbelastes, skal \(R_{s1}\) vælges tilpas stor.
+AC-spændingens frekvens er 10 [kHz].
+Med et oscilloskop måles spændingsfaldene \(\mathbf{V_1}\) og \(\mathbf{V_2}\).
+Dataene eksporteres og faseforskellen samt forholdet mellem amplituderne \(A_1\) og \(A_2\) bestemmes herudfra.
 \subsubsection{Måleresultater}
 \paragraph{Metode 1}
-Seriemodstanden $R_s$ er blevet målt til 61,77 $\Omega$.
-På figur \ref{fig:induktans0} er transientresponsen for spændingsfaldet over $R_s$ indtegnet
+Seriemodstanden \(R_s\) er blevet målt til 61,77 \([Omega]\).
+På figur \ref{fig:induktans0} er transientresponsen for spændingsfaldet over \(R_s\) indtegnet
 sammen med de to spændingsniveauer, hvorudfra tidskonstanten bestemmes.
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=1\textwidth]{./graphics/induktans0.eps}
 	\caption[Transientrespons for låst motor]
 		{Transientrespons for låst motor. De to vandrette røde linjer angiver spændingsniveauerne til bestemmelse af tidskonstanten.
-		Den øverste linje er ved 4 V, mens den nederste linje er ved 4 V $\cdot \frac{1}{e}$.}
+		Den øverste linje er ved 4 [V], mens den nederste linje er ved 4 [V] \(\cdot \frac{1}{e}\).}
 	\label{fig:induktans0}
 \end{figure}
 Figur \ref{fig:induktans0} viser flere målingers transientrespons.
 \paragraph{Metode 2}
-Seriemodstanden $R_s1$ er blevet målt til 473,3 $\Omega$.
-Spændingen har en amplitude på 2,4 V og et DC-offset på 2,5 V.
+Seriemodstanden \(R_s1\) er blevet målt til 473,3 \([\Omega]\).
+Spændingen har en amplitude på 2,4 [V] og et DC-offset på 2,5 [V].
 På figur \ref{fig:induktans1} er steady-state responsen for spændingsfaldene over DC-motoren og seriemodstanden indtegnet.
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=1\textwidth]{./graphics/induktans1.eps}
 	\caption[Steady-state respons for låst motor]
-		{Steady-state respons for låst motor. Med mørkeblåt er markeret $\mathbf{V_1}$ og med mørkegrønt $\mathbf{V_2}$.
+		{Steady-state respons for låst motor. Med mørkeblåt er markeret \(\mathbf{V_1}\) og med mørkegrønt \(\mathbf{V_2}\).
 		To tilpassede sinuskurver, fundet vha. MATLAB's fit-funktion, er indtegnet med lyseblåt og rødt.}
 	\label{fig:induktans1}
 \end{figure}
@@ -219,25 +219,25 @@ På figur \ref{fig:induktans1} er steady-state responsen for spændingsfaldene o
 \paragraph{Metode 1}
 For hver måling af transientresponsen, vist i figur \ref{fig:induktans0} er induktansen blevet
 bestemt ved brug af ligning \ref{eq:induktans0}.
-Gennemsnitsinduktansen er ved denne metode blevet fundet til $L_m=0.395$ H.
+Gennemsnitsinduktansen er ved denne metode blevet fundet til \(L_m=0,395\) [H].
 \paragraph{Metode 2}
 Vha. MATLAB's fit-funktion er to sinuskurver blevet tilpasset til de målte spændingsfald.
-Ud fra funktionsforskrifterne på de to sinuskurver er amplitudeforholdet $\frac{A_1}{A_2}$
-og faseforskellen $\phi$ blevet beregnet,
+Ud fra funktionsforskrifterne på de to sinuskurver er amplitudeforholdet \(\frac{A_1}{A_2}\)
+og faseforskellen \(\phi\) blevet beregnet,
 og vha. ligningerne \ref{eq:Rm_0} og \ref{eq:Lm_0} er resistansen hhv. induktansen blevet beregnet til
-179,94 $\Omega$ hhv. 3,047 mH.
-Effektafsættelsen i motoren er med amplitudeforskellen på $\mathbf{V_1}$ og $\mathbf{V_2}$ samt
-de i forsøget fundne værdier $R_{s1}$ og $R_m$ ved brug af ligning \ref{eq:effekt} beregnet til 0,405 mW.
+179,94 \([\Omega]\) hhv. 3,047 [mH].
+Effektafsættelsen i motoren er med amplitudeforskellen på \(\mathbf{V_1}\) og \(\mathbf{V_2}\) samt
+de i forsøget fundne værdier \(R_{s1}\) og \(R_m\) ved brug af ligning \ref{eq:effekt} beregnet til 0,405 [mW].
 \subsubsection{Diskussion}
 Den lineære sammenhæng mellem strøm og spænding fundet i afnit \ref{ss:eksperiment1} kan ikke benægtes,
-og for effektafsættelser i motoren på over 48 mW må resistansen kunne antages at være 5,21 $\Omega$ som beregnet.
+og for effektafsættelser i motoren på over 48 [mW] må resistansen kunne antages at være 5,21 \([\Omega]\) som beregnet.
 Men, som fundet ved forsøget med metode 2, så er motorens resistans langt højere,
-179,94 $\Omega$ ved en effektafsættelse i motoren på 0,405 mW.
+179,94 \([\Omega]\) ved en effektafsættelse i motoren på 0,405 [mW].
 Dette indikerer, at motorens ækvivalente resistans er lineær i de brugbare intervaller, altså ved de effektafsættelser en
-praktisk applikation ville få brug for, altså over 48 mW, men at motoren opfører sig anderledes når effektafsættelsen
-bliver tilpas lille, i strørrelsesordenen under 1 mW.
+praktisk applikation ville få brug for, altså over 48 [mW], men at motoren opfører sig anderledes når effektafsættelsen
+bliver tilpas lille, i strørrelsesordenen under 1 [mW].
 Til brug i modelleringen og simuleringen af motoren til den praktiske applikation, hvor motoren skal kunne rotere,
-vurderes det derfor at den i afnit \ref{ss:eksperiment1} fundne ækvivalente modstand på $R_m=5,21 \Omega$ giver en meget
+vurderes det derfor at den i afsnit \ref{ss:eksperiment1} fundne ækvivalente modstand på \(R_m=5,21 [\Omega]\) giver en meget
 nøjagtig værdi for den faktiske modstand i motoren.
 
 Induktansen er imidlertid sværere at bestemme, da effektafsættelsen i de udførte forsøg er lav.
@@ -251,7 +251,7 @@ står uklart efter disse forsøg.
 \subsection{Eksperiment 3}
 \label{ss:eksperiment3}
 \subsubsection{Formål}
-Bestemmelse af proportionalitetskonstanterne $K_b$ og $K_t$ samt den viskøse friktionskonstant $B$.
+Bestemmelse af proportionalitetskonstanterne \(K_b\) og \(K_t\) samt den viskøse friktionskonstant \(B\).
 \subsubsection{Teori}
 Hvis man påfører motoren en DC-spænding og lader den rotere frit, uden ekstra belastning,
 så kan ligning \ref{eq:Vm_transient1} omskrives til ligning \ref{eq:Vm_freerun0}.
@@ -260,22 +260,22 @@ så kan ligning \ref{eq:Vm_transient1} omskrives til ligning \ref{eq:Vm_freerun0
 	\label{eq:Vm_freerun0}
  \end{equation}
 Samtidig kan kraftmomentet udtrykkes ved ligning \ref{eq:Tm_leveret}, hvor det eneste inertimoment vil være
-rotorens, navnlig $J_m$.
+rotorens, navnlig \(J_m\).
 Da vinkelhastigheden ikke ændrer sig ved steady-state kan ligningerne \ref{eq:Vm_freerun0} og \ref{eq:Tm_leveret} kombineres
 til ligning \ref{eq:KtimBw}.
 \begin{equation}
 	K_t\cdot{i_m}=B\cdot\omega
 	\label{eq:KtimBw}
  \end{equation}
-Hvis man kender motorens ækvivalente modstand $R_m$, steady-state strømmen $i_m$ ved en steady-state spænding $V_m$,
-samt steady-state vinkelhastigheden $\omega$, kan man altså vha. ligningerne \ref{eq:Vm_freerun0} og \ref{eq:KtimBw} bestemme
-proportionalitetskonstanterne $K_t$ og $K_b$ (fordi de har samme numeriske værdi i SI-enheder) og friktionskonstanten $B$.
+Hvis man kender motorens ækvivalente modstand \(R_m\), steady-state strømmen \(i_m\) ved en steady-state spænding \(V_m\),
+samt steady-state vinkelhastigheden \(\omega\), kan man altså vha. ligningerne \ref{eq:Vm_freerun0} og \ref{eq:KtimBw} bestemme
+proportionalitetskonstanterne \(K_t\) og \(K_b\) (fordi de har samme numeriske værdi i SI-enheder) og friktionskonstanten \(B\).
 \subsubsection{Fremgangsmåde}
 Den ubelastede motor påføres en kendt DC-spænding, og motoren opnår steady-state.
 Strømmen igennem motoren måles med et multimeter.
 Vinkelhastigheden måles ved at tælle antallet af encoder-ticks på ét minut
-(vinkelhastigheden kan omregnes til SI-enheder, i det det vides, at der er 360 ticks pr. omgang\todo{Kilde}).
-For hver måling beregnes $K_b$ og $K_t$ samt $B$ vha. ligningerne \ref{eq:Vm_freerun0} og \ref{eq:KtimBw}.
+(vinkelhastigheden kan omregnes til SI-enheder, i det det vides, at der er 360 ticks pr. omgang\todo{Kilde henvis til emg datablad}).
+For hver måling beregnes \(K_b\) og \(K_t\) samt \(B\) vha. ligningerne \ref{eq:Vm_freerun0} og \ref{eq:KtimBw}.
 
 Det anvendte multimeter er af typen TTi 1604,
 og antallet af ticks taltes med en tæller på FPGA'en, der automatisk stopper efter 1 minut.
@@ -290,30 +290,30 @@ I tabel \ref{tb:steadystatenoload} findes målingerne af strøm, spænding og vi
 	\label{tb:steadystatenoload}
 \end{figure}
 \subsubsection{Databehandling}
-For hver måling er $K_b$ og $K_t$ samt $B$ vha. ligningerne \ref{eq:Vm_freerun0} og \ref{eq:KtimBw} beregnet,
-i SI-enheder. Til beregningen er anvendt den i afsnit \ref{ss:eksperiment1} fundne værdi for $R_m$.
+For hver måling er \(K_b\) og \(K_t\) samt \(B\) vha. ligningerne \ref{eq:Vm_freerun0} og \ref{eq:KtimBw} beregnet,
+i SI-enheder. Til beregningen er anvendt den i afsnit \ref{ss:eksperiment1} fundne værdi for \(R_m\).
 Gennemsnittet af hver parameter findes i tabel \ref{tb:kbktb}.
 \begin{figure}[th!]
 	\centering
 	\input{content/tb_kbktb.tex}
 	\captionsetup{type=table}
-	\caption[Proportionalitetskonstanterne $K_b$, $K_t$ og $B$]
-			{Proportionalitetskonstanterne $K_b$, $K_t$ og $B$.}
+	\caption[Proportionalitetskonstanterne \(K_b\), \(K_t\) og \(B\)]
+			{Proportionalitetskonstanterne \(K_b\), \(K_t\) og \(B\).}
 	\label{tb:kbktb}
 \end{figure}
 
 \subsubsection{Diskussion}
-De fundne værdier for $K_b$, $K_t$ og $B$ vurderes at være nøjagtige approksimationer
+De fundne værdier for \(K_b\), \(K_t\) og \(B\) vurderes at være nøjagtige approksimationer
 til brug i modelleringen af systemet til en praktisk applikation, da de er fundet ved effektafsættelser
 der afspejler effektafsættelser, der vil forekomme i applikationen.
 Der er dog blevet set bort fra Coulomb-friktionen, og der vil skulle tages højde for dette under modelleringen.
 \subsubsection{Konklusion}
-Proportionalitetskonstanterne $K_b$ og $K_t$ er blevet fundet til i SI-enheder at have den numeriske værdi 0,517.
-Den viskøse friktionskonstant $B$ er blevet funder til 0,00319 N m s.
-Alle konstanterne er blevet fundet vha. værdien af $R_m$ fra afsnit \ref{ss:eksperiment1}.
+Proportionalitetskonstanterne \(K_b\) og \(K_t\) er blevet fundet til i SI-enheder at have den numeriske værdi 0,517.
+Den viskøse friktionskonstant \(B\) er blevet funder til 0,00319 \([N \cdot m \cdot s]\).
+Alle konstanterne er blevet fundet vha. værdien af \(R_m\) fra afsnit \ref{ss:eksperiment1}.
 \subsection{Eksperiment 4}
 \subsubsection{Formål}
-Bestemmelse af rotorens inertimoment $J_m$.
+Bestemmelse af rotorens inertimoment \(J_m\).
 Bestemmelse af størrelsen på friktionen i motoren.
 \subsubsection{Teori}
 Hvis der ikke løber strøm igennem motoren,
@@ -325,27 +325,27 @@ kan ligning \ref{eq:Vm_transient1} omskrives til ligning \ref{eq:Vm_nocurrent}.
 
 I dette forsøg fastgøres en masse til rotoren med en snor.
 Massen lades falde til jorden med tyngdeaccelerationen.
-Rotoren vil accelerere med vinkelaccelerationen $\alpha_{op}$.
+Rotoren vil accelerere med vinkelaccelerationen \(\alpha_{op}\).
 Jf. Newtons 2. lov vil det resulterende kraftmoment være givet ved ligning \ref{eq:Tres0}.
 \begin{equation}
 	T_{res}=J_m\cdot\alpha_{op}
 	\label{eq:Tres0}
  \end{equation}
-Dette kraftmoment kan også udtrykkes som kraftmomentet på rotoren fra snoren, $T_{op}$,
-fratrukket friktionskraftmomentet $T_f$, som udtrykt i ligning \ref{eq:Tres1}.
+Dette kraftmoment kan også udtrykkes som kraftmomentet på rotoren fra snoren, \(T_{op}\),
+fratrukket friktionskraftmomentet \(T_f\), som udtrykt i ligning \ref{eq:Tres1}.
 \begin{equation}
 	T_{res}=T_{op}-\|T_f\|
 	\label{eq:Tres1}
  \end{equation}
-Bemærk at $T_f$ er hele friktionskraftmomentet, inkl. Coulomb-friktion.
-Kraftmomentet $T_{op}$ kan udtrykkes som rotorens radius $r$ ganget med snorkraften, $F_snor$,
+Bemærk at \(T_f\) er hele friktionskraftmomentet, inkl. Coulomb-friktion.
+Kraftmomentet \(T_{op}\) kan udtrykkes som rotorens radius \(r\) ganget med snorkraften, \(F_{snor}\),
 som udtrykt i liginng \ref{eq:Top0}.
 \begin{equation}
 	T_{op}=r\cdot{F_{snor}}
 	\label{eq:Top0}
  \end{equation}
-Snorkraften kan udtrykkes ved tyngdekraften på massen samt den lineære acceleration af massen, $a$,
-som udtrykt i ligning \ref{eq:Fsnor0}, hvor a kan udtrykkes ved $\alpha_{op}$ som i ligning \ref{eq:a}.
+Snorkraften kan udtrykkes ved tyngdekraften på massen samt den lineære acceleration af massen, \(a\),
+som udtrykt i ligning \ref{eq:Fsnor0}, hvor a kan udtrykkes ved \(\alpha_{op}\) som i ligning \ref{eq:a}.
 \begin{equation}
 	F_{snor}=m\cdot(g-a)
 	\label{eq:Fsnor0}
@@ -356,15 +356,15 @@ som udtrykt i ligning \ref{eq:Fsnor0}, hvor a kan udtrykkes ved $\alpha_{op}$ so
  \end{equation}
 
 Når rotoren har opnået en given vinkelhastighed, og snorkraften stopper,
-vil rotoren decelerere med en vinkelacceleration $\alpha_{ned}$, som skyldes friktionskraftmomentet,
+vil rotoren decelerere med en vinkelacceleration \(\alpha_{ned}\), som skyldes friktionskraftmomentet,
 jf. ligning \ref{eq:Tf0}.
 \begin{equation}
 	\|T_f\|=J_m\|\alpha{ned}\|
 	\label{eq:Tf0}
  \end{equation}
 
-Inertimomentet $J_{disk}$ for en disk (ring) med massen $m_{disk}$, ydre radius $r_{disk}$ og
-indre radius $r_{hul}$ er givet ved ligning \ref{eq:Jdisk}\todo[inline]{Kilde til inertimoment}.
+Inertimomentet \(J_{disk}\) for en disk (ring) med massen \(m_{disk}\), ydre radius \(r_{disk}\) og
+indre radius \(r_{hul}\) er givet ved ligning \ref{eq:Jdisk},\citep[Side. 255, tabel 10-2b]{fund_of_physics}.
 \begin{equation}
 	J_{disk}=\frac{1}{2}\cdot{m_{disk}}\cdot\left(r_{hul}^2+r_{disk}^2\right)
 	\label{eq:Jdisk}
@@ -372,11 +372,11 @@ indre radius $r_{hul}$ er givet ved ligning \ref{eq:Jdisk}\todo[inline]{Kilde ti
 
 Da rotorskaftet på DC-motoren ikke er cylinderformet, blev det valgt at montere en disk
 på rotoren, således at de i teorien formler kan bruges til beregning af inertimomentet,
-med diskens radius $r_{disk}$.
+med diskens radius \(r_{disk}\).
 Med ligningerne \ref{eq:Tres0}, \ref{eq:Tres1}, \ref{eq:Top0}, \ref{eq:Fsnor0}, \ref{eq:a}, \ref{eq:Tf0} samt \ref{eq:Jdisk}
 kan rotorens inertimoment udtrykkes vha. de målbare størrelser
-$\alpha_{op}$, $\alpha_{ned}$, $m_{disk}$, $r_{disk}$, $r_{hul}$ og $m_{lod}$ (massen af det fastgjorte lod),
-mens friktionskraftmomentet kan udtrykkes vha. $m_{lod}$, $r_{disk}$, $\alpha_{op}$ og $\alpha_{ned}$,
+\(\alpha_{op}\), \(\alpha_{ned}\), \(m_{disk}\), \(r_{disk}\), \(r_{hul}\) og \(m_{lod}\) (massen af det fastgjorte lod),
+mens friktionskraftmomentet kan udtrykkes vha. \(m_{lod}\), \(r_{disk}\), \(\alpha_{op}\) og \(\alpha_{ned}\),
 som i ligningerne \ref{eq:Jrotor} og \ref{eq:Tf1}.
 \begin{equation}
 	J_{m}=	m_{lod}\cdot{r_{disk}}\cdot\left\|\frac{\alpha_{op}\cdot{r_{disk}}-g}{\alpha_{op}+\|\alpha_{ned}\|}\right\|
@@ -395,7 +395,8 @@ Når loddet har ramt gulvet, og spændingsfaldet er 0 V, stoppes målingen, og f
 \subsubsection{Måleresultater}
 Diksen har en masse på 21,2 g, en ydre radius på 1,25 cm og en indre radius på 5 mm.
 Loddets masse er 851,7 g.
-På figur \ref{fig:vemf0} er målingerne af $V_{EMF}$ indtegnet.
+På figur \ref{fig:vemf0} er målingerne af \(V_{EMF}\) indtegnet.
+
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=1\textwidth]{./graphics/vemf0.eps}
@@ -419,19 +420,19 @@ De lavpasfiltrerede data kan ses på figur \ref{fig:vemf1}.
 	\label{fig:vemf1}
 \end{figure}
 Jf. ligning \ref{eq:Vm_nocurrent} er det målte spændingsfald proportionalt med
-vinkelhastigheden, og hældningen af grafen vil således skulle divideres med $K_b$,
-før den repræsenterede vinkelaccelerationen. $K_b$ blev bestemt i afsnit \ref{ss:eksperiment3}.
-For hver måling bestemtes hældningerne $\alpha_{op}$ og $\alpha_{ned}$ vha. lineær regression på de lineære stykker,
+vinkelhastigheden, og hældningen af grafen vil således skulle divideres med \(K_b\),
+før den repræsenterede vinkelaccelerationen. \(K_b\) blev bestemt i afsnit \ref{ss:eksperiment3}.
+For hver måling bestemtes hældningerne \(\alpha_{op}\) og \(\alpha_{ned}\) vha. lineær regression på de lineære stykker,
 og ud fra dette er gennemsnitsaccelerationerne blevet fundet til
-$\alpha_{op}=49,3 \frac{\text{rad}}{\text{s}}$ og $\alpha_{ned}=-69,1 \frac{\text{rad}}{\text{s}}$.
+\(\alpha_{op}=49,3\) \([\frac{\text{rad}}{\text{s}}]\) og \(\alpha_{ned}=-69,1\) \([\frac{\text{rad}}{\text{s}}]\).
 Med disse værdier er inertimomentet beregnet vha. ligning \ref{eq:Jrotor}, og friktionskraftmomentet vha. ligning \ref{eq:Tf1}.
-De beregnede værdier er hhv. $J_m=8.26\cdot10^{-4} \text{kg}\cdot{\text{m}^2}$ og $\|T_f\|=0.0571$ N m.
+De beregnede værdier er hhv. \(J_m=8.26\cdot10^{-4}\) \([\text{kg}\cdot{\text{m}^2}]\) og \(\|T_f\|=0,0571\) \( [\text{N} \cdot \text{m}]\).
 \subsubsection{Diskussion}
-At $V_{EMF}$ aftager lineært fremfor eksponentielt indikerer,
+At \(V_{EMF}\) aftager lineært fremfor eksponentielt indikerer,
 at den viskøse friktion er lav i forhold til Coulomb-friktionen.
 Den lineære approksimation der i fremgangsmåden benyttes er derfor anvendelig,
 og giver et nøjagtigt billede af den tilstedeværende friktion samt rotorens inertimoment.
 \subsubsection{Konklusion}
-Rotorens inertimoment er bestemt til $J_m=8.26\cdot10^{-4} \text{kg}\cdot{\text{m}^2}$.
-Friktionskraftmomentet er bestemt til $\|T_f\|=0.0571$ N m.
+Rotorens inertimoment er bestemt til \(J_m=8,26\cdot10^{-4}\) \([\text{kg}\cdot{\text{m}^2}]\).
+Friktionskraftmomentet er bestemt til \(\|T_f\|=0,0571\) \( [\text{N} \cdot \text{m}]\).
 \subsection{Opsummering af DC motorparameter}
