--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -273,8 +273,8 @@ proportionalitetskonstanterne \(K_t\) og \(K_b\) (fordi de har samme numeriske v
 \subsubsection{Fremgangsmåde}
 Den ubelastede motor påføres en kendt DC-spænding, og motoren opnår steady-state.
 Strømmen igennem motoren måles med et multimeter.
-Vinkelhastigheden måles ved at tælle antallet af encoder-ticks på ét minut
-(vinkelhastigheden kan omregnes til SI-enheder, i det det vides, at der er 360 ticks pr. omgang\todo{Kilde henvis til emg datablad}).
+Vinkelhastigheden måles ved at tælle antallet af encoder-ticks på ét minut og kan omregnes til SI-enheder, 
+idet det vides, at der er 360 ticks pr. omgang, \citep{emgmotor}.
 For hver måling beregnes \(K_b\) og \(K_t\) samt \(B\) vha. ligningerne \ref{eq:Vm_freerun0} og \ref{eq:KtimBw}.
 
 Det anvendte multimeter er af typen TTi 1604,
