--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -89,7 +89,12 @@ url = {http://www.engineersedge.com/motors/gear_drive_system.htm}
 
 
 
-
+@ONLINE{emgmotor,
+author = {{Robot Electronics UK}},
+title = {EMG30, mounting bracket and wheel specification},
+year = {2014},
+url = {http://www.robot-electronics.co.uk/htm/emg30.htm}
+}
 
 
 
